# dep-graph-viz

./: .gitignore  README.md  makefile  pyproject.toml
.github/requirements/: requirements-all.txt  requirements-dev.txt  requirements-extras.txt  requirements-lint.txt  requirements.txt
dep_graph_viz/: __init__.py  __main__.py  config.py  dep_graph_viz.py  html.py  template.html
dep_graph_viz/util/: __init__.py  paths.py  util.py
docs/: dep_graph_viz.html  index.html  make_docs.py  package_map.dot  package_map.html  search.js
docs/combined/: dep_graph_viz.html  dep_graph_viz.md  dep_graph_viz.txt  dep_graph_viz_gfm.md
docs/coverage/: coverage.txt
docs/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_016438ac55e41e33___init___py.html  z_016438ac55e41e33_paths_py.html  z_016438ac55e41e33_util_py.html  z_a44f0ac069e85531_test_examples_py.html  z_efb3e753d5888500___init___py.html  z_efb3e753d5888500___main___py.html  z_efb3e753d5888500_config_py.html  z_efb3e753d5888500_dep_graph_viz_py.html  z_efb3e753d5888500_html_py.html  z_f9844043a17fd411_test_config_py.html  z_f9844043a17fd411_test_get_files_py.html  z_f9844043a17fd411_test_get_imports_py.html  z_f9844043a17fd411_test_paths_py.html
docs/dep_graph_viz/: config.html  dep_graph_viz.html  html.html  index.html  util.html
docs/dep_graph_viz/util/: index.html  paths.html  util.html
docs/templates/html/: module.html.jinja2
examples/: maze-dataset.dot  muutils.dot  numpy-core.dot  numpy.dot  zanj.dot
examples/dep_graph_viz/: 00000.dot  00000.html  11111.dot  11111.html
tests/: test_examples.py  test_util.py  test_util_2.py
tests/util/: test_config.py  test_get_files.py  test_get_imports.py  test_paths.py
