[project]
name = "dep-graph-viz"
version = "0.1.0"
description = "visualize a dependency graph for a python library"
authors = [
	{ name = "Michael Ivanitskiy", email = "mivanits@umich.edu" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"

dependencies = [
	"networkx>=3.1",
	"pydot>=1.4.2",
	"muutils>=0.6.12",
	"fire>=0.6.0",
]

# [project.optional-dependencies]
# cli = ["fire>=0.6.0"]

[dependency-groups]
dev = [
	# test
	"pytest>=8.2.2",
	# coverage
	"pytest-cov>=4.1.0",
	"coverage-badge>=1.1.0",
	# type checking
	"mypy>=1.0.1",
	# docs
	'pdoc>=14.6.0',
	# tomli since no tomlib in python < 3.11
	"tomli>=2.1.0; python_version < '3.11'",
]
lint = [
	# lint
	"pycln>=2.1.3",
	"ruff>=0.4.8",
]

[tool.uv]
default-groups = ["dev", "lint"]

[project.urls]
Homepage = "https://github.com/mivanit/dep-graph-viz"
Documentation = "https://github.com/mivanit/dep-graph-viz"
Repository = "https://github.com/mivanit/dep-graph-viz"
Issues = "https://github.com/mivanit/dep-graph-viz/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ruff config
[tool.ruff]
exclude = ["__pycache__"]

[tool.ruff.format]
indent-style = "tab"
skip-magic-trailing-comma = false

# Custom export configurations
[tool.uv-exports]
args = [
	"--no-hashes"
]
exports = [
	# no groups, no extras, just the base dependencies
    { name = "base", groups = false, extras = false },
	# all extras but no groups
    { name = "extras", groups = false, extras = true },
	# include the dev group (this is the default behavior)
    { name = "dev", groups = ["dev"] },
	# only the lint group -- custom options for this
	{ name = "lint", options = ["--only-group", "lint"] },
	# all groups and extras
    { name = "all", filename="requirements.txt", groups = true, extras=true },
	# all groups and extras, a different way
	{ name = "all", groups = true, options = ["--all-extras"] },
]

